<resources>
    <string name="app_name">Mini Projet Android</string>
    <string name="TP_1">TP Android n°1</string>
    <string name="TP_2">TP Android n°2</string>
    <string name="name">Nom</string>
    <string name="firstName">Prénom</string>
    <string name="validate">Valider</string>
    <string name="toList">Voir liste</string>
    <string name="action_settings">Settings</string>
    <string name="close">fermer</string>
    <string name="fullScreen">plein écran</string>
    <string name="resetList">vider la liste</string>
    <string name="description">Description</string>
    <string name="TP_3">TP Android n°3</string>
    <string name="allCategories">Tout</string>
    <string name="categories">Categorie(s): </string>
    <string name="categoryFilter">Filtrer par catégorie</string>
    <string name="download_success">Données téléchargées!</string>
    <string name="download_fail">téléchargement échoué...</string>
    <string name="downloading_images">téléchargement de données...</string>
    <string name="filtred_by">filtré par</string>
    <string name="retry">Reéssayer</string>
    <string name="quit">Quitter</string>
    <string name="InternetConnectionWarning">Veuillez activer votre connexion internet</string>
</resources>
