<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/gotName"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/gotFirstName"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toList"
        android:id="@+id/toListButton"
        android:layout_below="@id/gotFirstName"
        android:layout_gravity="center_horizontal" />

</LinearLayout>