<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TP_1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_marginTop="75dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:id="@+id/inputName"
            android:layout_alignParentRight="true"
            android:background="#fff"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="@string/name"
            android:layout_alignBaseline="@id/inputName"
            android:gravity="center"
            android:layout_toLeftOf="@+id/inputName"
            android:layout_toStartOf="@+id/inputName" />

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:id="@+id/inputFirstName"
            android:layout_below="@id/inputName"
            android:layout_alignParentRight="true"
            android:background="#fff"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:text="@string/firstName"
            android:layout_alignBaseline="@id/inputFirstName"
            android:gravity="center"
            android:layout_toLeftOf="@+id/inputFirstName"
            android:layout_toStartOf="@+id/inputFirstName" />

        <Button
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:id="@+id/okButton"
            android:layout_below="@id/inputFirstName"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</RelativeLayout>
